# simple-web-GSI-project

./: README.md  app.py  pyproject.toml
static/: styles.css
templates/: index.html
